// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a template macro 1`] = `
"let person = "Bob";
let age = 12;
const des = "That Bob is 12";
"
`;

exports[`create a template macro 2`] = `
"declare global {
    const real: (strings: TemplateStringsArray, ...expressions: unknown[]) => string;
}"
`;

exports[`create a type macro with createExprMacro 1`] = `
"const emit = defineEmits([
    "change",
    "update"
]);
"
`;

exports[`create a type macro with createExprMacro 2`] = `
"declare global {
    const defineEmits: <T>(...args: T[]) => T;
}"
`;

exports[`create a type macro with createTypeMacro 1`] = `
"const emit = defineEmits([
    "change",
    "update"
]);
"
`;

exports[`create a type macro with createTypeMacro 2`] = `
"declare global {
    const defineEmits: <T>() => T;
}"
`;

exports[`create complex expr macro 1`] = `
"declare global {
    const $add: (a: number, b: number) => number;
}"
`;
